add delay config file

--- a/WxRobot/WxRobot.csproj
+++ b/WxRobot/WxRobot.csproj
@@ -36,4 +36,10 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="WxRobot.dll.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
